// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-md-default 1`] = `
<Text
  className="text-[16px] leading-[24px] font-normal text-f0-foreground text-left"
>
  body-md-default
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-md-medium 1`] = `
<Text
  className="text-[16px] leading-[24px] font-medium text-f0-foreground text-left"
>
  body-md-medium
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-md-semibold 1`] = `
<Text
  className="text-[16px] leading-[24px] font-semibold text-f0-foreground text-left"
>
  body-md-semibold
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-sm-default 1`] = `
<Text
  className="text-[14px] leading-[20px] font-normal text-f0-foreground text-left"
>
  body-sm-default
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-sm-medium 1`] = `
<Text
  className="text-[14px] leading-[20px] font-medium text-f0-foreground text-left"
>
  body-sm-medium
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-sm-semibold 1`] = `
<Text
  className="text-[14px] leading-[20px] font-semibold text-f0-foreground text-left"
>
  body-sm-semibold
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-body-xs-medium 1`] = `
<Text
  className="text-[12px] leading-[16px] font-medium text-f0-foreground text-left"
>
  body-xs-medium
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-heading-lg 1`] = `
<Text
  className="text-[24px] leading-[32px] tracking-[-0.2px] font-semibold text-f0-foreground text-left"
>
  heading-lg
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-heading-md 1`] = `
<Text
  className="text-[20px] leading-[28px] tracking-[-0.2px] font-semibold text-f0-foreground text-left"
>
  heading-md
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-heading-sm 1`] = `
<Text
  className="text-[16px] leading-[24px] font-semibold text-f0-foreground text-left"
>
  heading-sm
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders all typography variants: variant-heading-xl 1`] = `
<Text
  className="text-[36px] leading-[40px] tracking-[-0.2px] font-semibold text-f0-foreground text-left"
>
  heading-xl
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders with color variants: color-accent 1`] = `
<Text
  className="text-[14px] leading-[20px] font-normal text-f0-foreground-accent text-left"
>
  accent
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders with color variants: color-critical 1`] = `
<Text
  className="text-[14px] leading-[20px] font-normal text-f0-foreground-critical text-left"
>
  critical
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders with color variants: color-default 1`] = `
<Text
  className="text-[14px] leading-[20px] font-normal text-f0-foreground text-left"
>
  default
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders with color variants: color-secondary 1`] = `
<Text
  className="text-[14px] leading-[20px] font-normal text-f0-foreground-secondary text-left"
>
  secondary
   text
</Text>
`;

exports[`AnimatedF0Text Snapshots renders with default variant (body-sm-default) 1`] = `
<Text
  className="text-[14px] leading-[20px] font-normal text-f0-foreground text-left"
>
  Default text
</Text>
`;
